unpackaged/main/default/objects/APXTConga4__Document_History__c/fields/APXTConga4__Conga_Solution__c.field-meta.xml
<CustomField>
    <fullName>APXTConga4__Conga_Solution__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Conga Solution</label>
    <referenceTo>APXTConga4__Conga_Solution__c</referenceTo>
    <relationshipLabel>Document Histories</relationshipLabel>
    <relationshipName>Document_Histories</relationshipName>
    <type>Lookup</type>
</CustomField>