unpackaged/main/default/objects/APXTConga4__Document_History__c/fields/APXTConga4__Last_Viewed__c.field-meta.xml
<CustomField>
    <fullName>APXTConga4__Last_Viewed__c</fullName>
    <label>Last Viewed</label>
    <summarizedField>APXTConga4__Document_History_Detail__c.APXTConga4__Last_Viewed__c</summarizedField>
    <summaryForeignKey>APXTConga4__Document_History_Detail__c.APXTConga4__Document_History__c</summaryForeignKey>
    <summaryOperation>max</summaryOperation>
    <type>Summary</type>
</CustomField>