unpackaged/main/default/objects/APXTConga4__Document_History__c/fields/APXTConga4__Number_of_Views__c.field-meta.xml
<CustomField>
    <fullName>APXTConga4__Number_of_Views__c</fullName>
    <label>Number of Views</label>
    <summarizedField>APXTConga4__Document_History_Detail__c.APXTConga4__Number_of_Views__c</summarizedField>
    <summaryForeignKey>APXTConga4__Document_History_Detail__c.APXTConga4__Document_History__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>